@@ -245,6 +245,17 @@
 					</select></td>
 				</tr>
 			</table>
+			<br>
+			<h2>P1 Smart Meter:</h2>
+			<table class="display" id="p1metertable" border="0" cellpadding="0" cellspacing="0">
+				<tr>
+					<td align="right" style="width:60px"><label>Type: </label></td>
+					<td><select id="comboP1MeterType" name="P1PowerMode" style="width:120px" class="combobox ui-corner-all">
+						<option value="0">Single</option>
+						<option value="1">Double</option>
+					</select></td>
+				</tr>
+			</table>
 		</section>
 
 		<!-- Other Settings
@@ -445,6 +456,9 @@ function ShowSettings()
       }
       if (typeof data.CM113DisplayType != 'undefined') {
         $("#owl113table #comboscm113type").val(data.CM113DisplayType);
+      }
+      if (typeof data.P1PowerMode != 'undefined') {
+        $("#p1metertable #comboP1MeterType").val(data.P1PowerMode);
       }
       if (typeof data.UseAutoUpdate != 'undefined') {
         $("#autoupdatetable #checkforupdates").prop('checked',data.UseAutoUpdate==1);
